--- a/zephyros-frontend/package.json
+++ b/zephyros-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.5",
     "ethers": "^5.7.2",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
